--- a/dist.ini
+++ b/dist.ini
@@ -30,7 +30,9 @@ format = %v %{yyyy-MM-dd HH:mm:ss}d
 [Test::PodSpelling]
 wordlist = Pod::Wordlist
 spell_cmd = aspell list
-stopwords = ua
+stopwords = fm
+stopwords = getInfo
+stopwords = xml
 
 [Prereqs]
 Moo = 2
