--- a/dist.ini
+++ b/dist.ini
@@ -32,6 +32,7 @@ wordlist = Pod::Wordlist
 spell_cmd = aspell list
 stopwords = fm
 stopwords = getInfo
+stopwords = ua
 stopwords = xml
 
 [Prereqs]
